# RobMob

./: CMakeLists.txt  README.md  TO DO  package.xml
Code_fourni/: Projet de Robotique Mobile_ Groupe1.odp  Projet de Robotique Mobile_ Groupe2.odp
Code_fourni/minilab_navigation/: CMakeLists.txt
Code_fourni/minilab_navigation/urdf/: minilab_equiped.urdf
Code_fourni/minilab_simulation/: package.xml
Code_fourni/minilab_simulation/launch/: minilab_gazebo.launch  minilab_gazebo_teleop.launch  minilab_gazebo_teleop_keyboard.launch  minilab_simulation.launch  sim_keyboard.launch
map_filtering/: CMakeLists.txt  package.xml
map_filtering/include/map_filtering/: cv_filter.hpp  map_filtering_node.hpp  mapping_utils.hpp
map_filtering/launch/: hector_test.launch  karto_slam.launch  map_filtering.launch
map_filtering/src/: cv_filter.cpp  map_filtering_node.cpp  mapping_utils.cpp
mapping/: CMakeLists.txt  package.xml
mapping/launch/: karto_slam.launch  mapping.launch  true_config.rviz
mapping/src/: get_map.py  test_hector.py
minilab_manager/: CMakeLists.txt  package.xml
minilab_manager/include/minilab_manager/: interface.hpp
minilab_manager/src/: interface.cpp
path/: CMakeLists.txt  package.xml  setup.py
path/include/path/: algo.py  follow.py  retrieve_map.py
path_finding/: CMakeLists.txt  README.md  package.xml  setup.py
path_finding/include/path_finding/: path_finding.py  retrieve_map.py
path_finding/src/: path_finding.py  retrieve_map.py  test.py
robmob_launcher/: CMakeLists.txt  package.xml
robmob_launcher/config/: top_down_map.rviz
robmob_launcher/launch/: mapping.launch  path_finding.launch
robmob_msgs/: CMakeLists.txt  package.xml
robmob_msgs/msg/: CommandStatus.msg
src/path_finding/: CMakeLists.txt
src/teleoperation/: CMakeLists.txt  package.xml
src/teleoperation/launch/: teleop.launch
src/teleoperation/src/: test.py
teleoperation/: CMakeLists.txt
teleoperation/launch/: teleop_turtle.launch
teleoperation/src/: teleop_minilab.py  teleop_turtle.py  test.py
trajectory_follower/: CMakeLists.txt  package.xml
trajectory_follower/include/trajectory_follower/: trajectory_follower_node.hpp
trajectory_follower/src/: trajectory_follower_node.cpp
util/: CMakeLists.txt  package.xml  setup.py
util/include/util/: map.py
