<?xml version="1.0"?>
<package format="2">
  <name>path_finding</name>
  <version>0.0.0</version>
  <description>Package for the path finding</description>


  <maintainer email="quentin.olivier1996@gmail.com">Quentin</maintainer>
  <license>GPLv3</license>

  <author email="quentin.olivier1996@gmail.com">Quentin</author>
  <author email="quentin.olivier1996@gmail.com">Mael</author>


  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
 
  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
